--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ct-app",
-  "version": "0.0.0",
+  "name": "ps-xt-ps",
+  "version": "0.1.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve:ssr",
